--- a/views/twitch_api.ejs
+++ b/views/twitch_api.ejs
@@ -7,9 +7,11 @@
   </head>
   <body>
     <div class="tabbed-box">
-  <button class="all-tab">All</button>
-  <button class="online-tab">Online</button>
-  <button class="offline-tab">Offline</button>
-</div>
+      <button class="btn all-tab active btn-lg">All</button>
+      <button class="btn online-tab btn-lg">Online</button>
+      <button class="btn offline-tab btn-lg">Offline</button>
+    </div>
+    <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
+    <script src="javascripts/twitch.js"></script>
   </body>
 </html>
