--- a/views/twitch_api.ejs
+++ b/views/twitch_api.ejs
@@ -3,15 +3,36 @@
   <head>
     <title><%= title %></title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
+    <link href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css" rel="stylesheet"/>
     <link rel='stylesheet' href='/stylesheets/twitch.css'/>
   </head>
   <body>
-    <div class="tabbed-box">
-      <button class="btn all-tab active btn-lg">All</button>
-      <button class="btn online-tab btn-lg">Online</button>
-      <button class="btn offline-tab btn-lg">Offline</button>
+    <div class="header">
+      <img class="twitch-pic" src="/images/twitch-logo.png">
     </div>
+    <!--<div class="authenticate">
+    <button class= "btn btn-lg">Authenticate
+    </button>
+    </div> -->
+    <div class="tabbed-box">
+      <button class="btn all-tab active btn-lg" id="all">All</button>
+      <button class="btn online-tab btn-lg center-btn" id="online">Online</button>
+      <button class="btn offline-tab btn-lg" id="offline">Offline</button>
+    </div>
+    <div class="purple-space">
+      <div class="search-bar">
+        <input class= "input-text" type="text" name="search" placeholder="Search">
+        <i class="icon fa fa-search"></i>
+      </div>
+    </div>
+    <div class="streamer-box">
+      <!-- <div class="icon-box"></div>
+      <div class="main-box"></div>
+      <div class="status-box"></div> -->
+    </div>
+    <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
-    <script src="javascripts/twitch.js"></script>
+    <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
+    <script src="javascripts/twitch_old.js"></script>
   </body>
 </html>
