--- a/views/twitch_api.ejs
+++ b/views/twitch_api.ejs
@@ -33,6 +33,7 @@
     <script src="https://embed.twitch.tv/embed/v1.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
-    <script src="javascripts/twitch_old.js"></script>
+    <script src="javascripts/twitch.js"></script>
+    <script src="javascripts/apiinfo.js"></script>
   </body>
 </html>
