--- a/public/stylesheets/twitch.css
+++ b/public/stylesheets/twitch.css
@@ -1,7 +1,13 @@
-body, html {
-  min-height: 100%;
+html {
+  max-width: 100%; }
+
+body {
   margin-top: 50px;
   background-color: #E6E0F0; }
+
+.content {
+  max-width: 75%;
+  margin: 0 auto; }
 
 .twitch-pic {
   display: flex;
@@ -19,6 +25,9 @@ body, html {
   margin: 100px auto 0;
   background-color: #50377F;
   border-radius: 10px 10px 0px 0px; }
+  @media (max-width: 576px) {
+    .tabbed-box {
+      font-size: 10px; } }
   .tabbed-box .all-tab {
     border-right: 1px solid #fff;
     width: 33%;
@@ -62,7 +71,7 @@ body, html {
     outline: -webkit-focus-ring-color auto 0px; }
 
 .search-bar {
-  width: 70%;
+  width: 80%;
   background-color: white;
   display: block;
   margin: 0 auto;
@@ -97,8 +106,8 @@ body, html {
   flex-direction: column; }
   .streamer-box .streamer-row {
     display: grid;
-    grid-template-columns: 50px auto 125px;
-    grid-template-rows: 50px auto; }
+    grid-template-columns: 95px auto 95px;
+    grid-template-rows: 55px auto; }
     .streamer-box .streamer-row.online {
       order: 0;
       cursor: pointer; }
@@ -107,14 +116,17 @@ body, html {
     .streamer-box .streamer-row.hidden {
       display: none; }
     .streamer-box .streamer-row .icon-box {
-      width: 50px;
-      height: 50px; }
+      margin: 0 auto;
+      width: 55px;
+      height: 55px; }
     .streamer-box .streamer-row .main-box {
       color: #E6E0F0;
       font-size: 18px;
-      padding-left: 5%;
       display: flex;
       align-items: center; }
+      @media (max-width: 576px) {
+        .streamer-box .streamer-row .main-box {
+          font-size: 12px; } }
     .streamer-box .streamer-row .status-box {
       font-size: 18px;
       padding: 0;
@@ -128,6 +140,9 @@ body, html {
 
 .livestream {
   height: 500px; }
+
+.twitch-box {
+  margin: 0 auto; }
 
 .hidden {
   display: none; }
