--- a/views/twitch_api.ejs
+++ b/views/twitch_api.ejs
@@ -7,6 +7,7 @@
     <link rel='stylesheet' href='/stylesheets/twitch.css'/>
   </head>
   <body>
+  <div class="content">
     <div class="header">
       <img class="twitch-pic" src="/images/twitch-logo.png">
     </div>
@@ -30,10 +31,11 @@
       <div class="main-box"></div>
       <div class="status-box"></div> -->
     </div>
-    <script src="https://embed.twitch.tv/embed/v1.js"></script>
+    <script src="http://player.twitch.tv/js/embed/v1.js"></script>
     <script src="https://code.jquery.com/jquery-3.2.1.slim.min.js" integrity="sha384-KJ3o2DKtIkvYIK3UENzmM7KCkRr/rE9/Qpg6aAZGJwFDMVNA/GpGFF93hXpG5KkN" crossorigin="anonymous"></script>
     <script src="http://code.jquery.com/jquery-latest.min.js" type="text/javascript"></script>
     <script src="javascripts/twitch.js"></script>
     <script src="javascripts/apiinfo.js"></script>
+  </div>
   </body>
 </html>
