fixed nodemon error

--- a/views/twitch_api.ejs
+++ b/views/twitch_api.ejs
@@ -18,7 +18,7 @@
     <div class="tabbed-box">
       <button class="btn all-tab active btn-lg" id="all">All</button>
       <button class="btn online-tab btn-lg center-btn" id="online">Online</button>
-      <button class="btn offline-tab btn-lg" id="offline">Offline</button>
+      <button class="btn offline-tab btn-lg" id="offline">Offlin</button>
     </div>
     <div class="purple-space">
       <div class="search-bar">
