added search bar functionality

--- a/views/twitch_api.ejs
+++ b/views/twitch_api.ejs
@@ -18,11 +18,11 @@
     <div class="tabbed-box">
       <button class="btn all-tab active btn-lg" id="all">All</button>
       <button class="btn online-tab btn-lg center-btn" id="online">Online</button>
-      <button class="btn offline-tab btn-lg" id="offline">Offlin</button>
+      <button class="btn offline-tab btn-lg" id="offline">Offline</button>
     </div>
     <div class="purple-space">
       <div class="search-bar">
-        <input class= "input-text" type="text" name="search" placeholder="Search">
+        <input class= "input-text" id="input" type="text" name="search" placeholder="Search">
         <i class="icon fa fa-search"></i>
       </div>
     </div>
