added link to twitch api on image

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -19,16 +19,15 @@
         <h1>Hi, I'm Camilia</h1>
         <h2>Front-end Developer</h2>
         <div class="hzline"></div>
-        <p>HTML/CSS, Javascript, React</p>
       </div>
     </div>
     <div class="portfolio" id="portfolio">
       <h1>Portfolio</h1>
       <div class="hzline"></div>
       <div class="portfolio-card card">
-        <img class="card-img-top" src="/images/twitchlogo.jpg" alt="Card image cap">
+        <a href="twitch_api"><img class="card-img-top" src="/images/twitchlogo.jpg" alt="Card image cap"></a>
         <div class="card-body">
-          <h5 class="card-title">Twitch API Example</h5>
+          <a href="twitch_api"><h5 class="card-title"> Twitch API Example</h5></a>
           <p class="card-text">Uses Twitch API to display online/offline channels</p>
           <span class="badge badge-secondary">Javascript</span>
         </div>
