--- a/views/index.ejs
+++ b/views/index.ejs
@@ -5,7 +5,7 @@
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css">
     <script defer src="https://use.fontawesome.com/releases/v5.0.6/js/all.js"></script>
     <link rel='stylesheet' href='/stylesheets/style.css'>
-    
+
   </head>
   <body>
     <div class="main" id="home">
@@ -36,7 +36,7 @@
     <div class="about-me" id="about-me">
       <h1>About Me</h1>
       <div class="hzline"></div>
-      <p>My name is Camilia and I'm an up and coming front-end developer with HTML/CSS, JavaScript/jQuery, PHP, and MySQL experience. I'd like to use my skills to help create beautiful and functional user experiences and develop unique user interfaces.</p>
+      <p>My name is Camilia and I'm a front-end developer with HTML, CSS, SCSS, JavaScript/jQuery, PHP, and MySQL experience. I'd like to use my skills to help create beautiful and functional user experiences and develop unique user interfaces.</p>
     </div>
     <div class="contact" id="contact">
       <h1>Get In Touch</h1>
